fix RTL layout issue with Instructor thumbnail and name in course details page

--- a/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
+++ b/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
@@ -984,8 +984,7 @@ header.header-main {
           margin-top: 0;
           color: $brand-color;
           line-height: 1rem;
-          padding-left: 1.3rem;
-          padding-bottom: 1.5rem;
+          padding: 0 1.3rem 1.5rem;
           font-size: 0.8rem;
           span{
             display: block;
